Fixes bug where ball can get stuck in wall, and refactoring of collisionHandler

--- a/react-golf/src/styles/course-ground.scss
+++ b/react-golf/src/styles/course-ground.scss
@@ -80,18 +80,32 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(0);
+    transform: translate(-50%, -50%);
     opacity: 0;
 
     width: 6rem;
     height: 6rem;
 
-    transition: transform 250ms ease-out, opacity 250ms ease-out; // Add this line
+    transition: transform 250ms ease-out, opacity 250ms ease-out;
   }
 
   .stars-visible {
+    transform: translate(-50%, -50%);
+    animation: fadeInFadeOut 2500ms;
+  }
+}
+@keyframes fadeInFadeOut {
+  0% {
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 0;
+  }
+  30% {
     transform: translate(-50%, -50%) scale(1);
     opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 0;
   }
 }
 
